--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/forms": "^4.0.6",
+    "@rebass/preset": "^4.0.5",
+    "@xstate/react": "^0.8.1",
+    "emotion-theming": "^10.0.19",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "rebass": "^4.0.7",
+    "xstate": "^4.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
