--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "combo-lock-helper",
   "version": "0.1.0",
+  "homepage": "https://nikzb.github.io/combo-lock-helper",
   "private": true,
   "dependencies": {
     "@rebass/forms": "^4.0.6",
@@ -14,6 +15,8 @@
     "xstate": "^4.7.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
